kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubescale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubescale
  template:
    metadata:
      labels:
        app: kubescale
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: scale-config
      containers:
        - name: stress
          image: "someregistry.azurecr.io/kubestres-cpu:v3"
          volumeMounts:
            - mountPath: /etc/kubescale
              name: config-volume
          resources:
            requests:
              cpu: 1
              memory: 200Mi
        - name: mem
          image: "someregistry.azurecr.io/kubestres-mem:v1"
          volumeMounts:
            - mountPath: /etc/kubescale
              name: config-volume
          resources:
            requests:
              cpu: 1
              memory: 700Mi
        # - name: nginx
        #   image: "nginx:alpine"
        #   ports:
        #     - containerPort: 80
        #   resources:
        #     requests:
        #       cpu: 1
        #       memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: kubescale
